<resources>
    <string name="app_name">Chat App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_account">Login account</string>
    <string name="register_account">Register account</string>
    <string name="name">Name</string>
    <string name="re_password">Re-Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="select_user">Select user</string>
    <string name="nh_p_tin_nh_n">Nhập tin nhắn</string>
    <string name="online">Online</string>
</resources>